UI interface changed to ReactJS
Signed-off-by: Florent BOURASSE <fbourasse@jahia.com>